--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sergey-netlify",
+  "name": "clearleft-internet-project-2020",
   "version": "1.0.0",
-  "description": "A Sergey example project, ready for Netlify",
+  "description": "Self Treat",
   "private": true,
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sergey": "0.0.12"
+    "sergey": "0.0.13"
   }
 }
